@@ -1,3 +1,3 @@
 Version 1.0
 ParentSets TestParent1
-TopLevels article cover category
+TopLevels article cover category publish_test
